# madr

./: Dockerfile  README.md  compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: main.yml
madr/: __about__.py  __main__.py  app.py  models.py
migrations/: env.py
migrations/versions/: a350c63ec959_inicio_cria_tabela_users.py
tests/: conftest.py  test_app.py  test_db.py
