[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "madr"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "André P. Santos", email = "andreztz@gmail.com" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "fastapi[standard]",
  "pydantic-settings",
  "alembic",
  "pwdlib[argon2]",
  "python-multipart",
  "pyjwt",
  "psycopg[binary]",
]

[project.urls]
Documentation = "https://github.com/André P. Santos/madr#readme"
Issues = "https://github.com/André P. Santos/madr/issues"
Source = "https://github.com/André P. Santos/madr"

[tool.hatch.version]
path = "madr/__about__.py"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.ruff]
line-length = 79
extend-exclude = ["migrations"]

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest>=8.2.2",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.8",
  "factory-boy",
  "freezegun",
  "testcontainers",
]

[tool.hatch.envs.default.scripts]
server = "fastapi dev madr/app.py"
format = "ruff check . --fix && ruff format ."
lint = "ruff check . && ruff check . --diff"
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
  "coverage html",
]
cov = [
  "test-cov",
  "cov-report",
]
